[gd_scene load_steps=5 format=2]

[ext_resource path="res://Codes/LanceRoquette.gd" type="Script" id=1]
[ext_resource path="res://Sprites/lance_roquette.png" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 8.16038, 14.1671 )

[sub_resource type="CircleShape2D" id=2]
radius = 221.319

[node name="LanceRoquette" type="KinematicBody2D"]
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 0, 2 )
shape = SubResource( 1 )

[node name="TourelleAim" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="TourelleAim"]
shape = SubResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="Aim" type="Position2D" parent="Sprite"]
position = Vector2( 0, -30 )
[connection signal="body_entered" from="TourelleAim" to="." method="_on_TourelleAim_body_entered"]
[connection signal="body_exited" from="TourelleAim" to="." method="_on_TourelleAim_body_exited"]
